@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST openrc-settingsd-1.0.1.tar.xz 243552 SHA256 2047267982c716cbc113d76d826f9b694706dbf737273eaaab239f6839d9ade2 SHA512 1f04a4b078a5fb659573daec0962f819af7eaff17a6213c4881726833cf32becd71dd820cd63767e2933465df26b3e4a3475d94f23e203a6977298965c709b21 WHIRLPOOL 5db609b67f1bdc8d1e5ccb4a3efb2b3f2aba18695ed824a667e95887a7a3977db145266926dd953cae7f3f961cb0bd30fcd89885ced5618d21af6386f927b83f
-DIST openrc-settingsd-1.0.tar.xz 243464 SHA256 1ab2da6de3fe53adc9138c88c8b5e06cae0ba8451cdb53f70197aa5b0306adf0 SHA512 d3a2ce493dbf0c1f449589bf731d85ee1f024226d439780b9986624cafccaa58032658e28f3f05bf1f4a3400bc19c14fcd0418bdf054777bc7d2f9cdf026135f WHIRLPOOL 6482ad2cecfad54891c1959febd0a334fc0c2b4290294bddb5526eaf606721bf98542e4b4a798283da6aca4d0c7060ff3d3186745e792316c67738f9dae6a4ed
-EBUILD openrc-settingsd-1.0.1.ebuild 1426 SHA256 294676799675f53a2141bcc0edaafaf19da51bfd64a390db028fffdb2e45a9e2 SHA512 390e65bc45a4f376c3bf5d72eb316afc7b09b93e376f9b01c2ba658fb93619aad69db9d4e013ce2a080a623cd180e9a80af0444a4c6cb819fb60174f83921d16 WHIRLPOOL c23c987ede2d00f3ef4bd8fff34f9f1300ef84d6d26f8047c8fc3e518ca75092aae23b8454b5cdd3e77e0cf215a28f4456fe594896bc2035be7fb0ed86aa4eaf
-EBUILD openrc-settingsd-1.0.ebuild 1398 SHA256 cdcb703b79a03a5880500d1f9d7075be3a4a6ed5a3c2627ed981539a5d67cfda SHA512 b07537f06caf29db5e539acc47fb0e12091bcca14676d8ccc36cef4a0a6962de5a0d737a3096ca9d3c0806b6cbef9341aef99cdc89f893553804a2fc51408cef WHIRLPOOL 86932c2a5c374674425170bafe02b80148b2f3ddb20e828c51caecfd59c2c8ec9f564c02c7116a7c7a064fc5a3544cca0b36e4432d19307b128c73011f19a97b
-MISC ChangeLog 1232 SHA256 e45d1c5fa5b8385b14f9b64984a5ca1a08df35966f76c176acc3d77e92176481 SHA512 c96edfed11ac7d700ac07756df00c43c1f6e27b50f9a26391a89d163af2237e7e9d04059bc929eb704d80a9b27be6c5e84697c6f9bfc8c2fb80f8e45cb24be0a WHIRLPOOL 54a66fe262004a40152bcbdd26689adc60d2d9f730b1b582e851e8cee1fa95617d061c68400047e9dec4675f5e2fd9e4289a989f83ee462965fcd80dd5783395
+EBUILD openrc-settingsd-1.0.1.ebuild 1440 SHA256 35f8d9e629307f2346698bcbf4a6372b7b697fe2609ce3f495c2e274080728fe SHA512 8fab18bfc18b70a766ce9a737557bf93e3d4c2197546f3a30058d29744efda7b5d5b60ecfbb9a8c149a62bd9f1aba500fb26f80b7422100febcaf6732e933318 WHIRLPOOL 64fd8d66024e9607df5b5f7266e2326b2fd82f01beb91b67382c7afc82857ffbd893e0eba3497248ca626a4e84bc56629982ae5f51d415dbed886228f2e9ad64
+MISC ChangeLog 1458 SHA256 10cf2a187088d983094449779af513512941527e6c4e222c4e035a9837b2773d SHA512 121ff14bc560e837104251823dcf7555eb8fda11e52d64298cfd460aaefd165e0b5156b23dd3552bd54ca68863f37f0dfd2abb1616000df0f7b807eecded8630 WHIRLPOOL 384ca7c3d67226643a557ab4f408343a9b450d8dea63fb6c08e658c8850de8802c0b2c5de3173e2d0332d8e973f14334f0bd562b6f71e8ec847cfa9bd53c536a
 MISC metadata.xml 383 SHA256 97b3f7bf3af5aa28c4c196972fa4711d5db15da75107dc5887242369070747bd SHA512 c67840902f6825ed90c2c26c6ebeb28a16c0a904a45f796a495ec3dfe7ae1715511191c697aa4b4dffbc64fdb4851f2a952f167685368ab39eea468a19427a8d WHIRLPOOL 1de041ffac0a41624e740dc82c270b7f40a16e41df7be4caaf8791c0415e0ae252ba92344166e175ca54d0f41d655ed57fa99b057b08912dfa7c59ac814fa5f6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQ/Zt3AAoJEJ0WA1zPCt1h7/4H/2LNv/n0ezlGAWTVOIGYYWFx
+c5hB/eVhD9NxXIIs7zJQg4hdq3dqRAlOvua5Db8aXULfPfJ5BKOBsYxL8VnGXYAS
+PIYiJp2GExUfbibCt1WLsxuTogySXN/FCGNARbLJVuRzo2Z8wh1CvUr+3TbO3e4O
+zQM9NrxljTmF/1hnfmK4EG2GJW30vi4y5CyoHMU+AHBKT6h8MiKy1Lt4HLChDsf7
+G3KJsr3zUn3YK5Omyv+SP4PeY4Ds4CD5deBnuJJm7ebC7unhsMNcWs73DMfQ1DCB
+OxQwhbWZMWzsC42pOAZZuN896PAxquQ7Op7asveCoJkkz8b8Vf83paq3vlQDK4g=
+=EmIa
+-----END PGP SIGNATURE-----
