@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/openrc-settingsd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/openrc-settingsd/ChangeLog,v 1.8 2013/01/06 09:11:48 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/openrc-settingsd/ChangeLog,v 1.9 2013/01/21 19:48:06 tetromino Exp $
+
+  21 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
+  -openrc-settingsd-1.0.ebuild, openrc-settingsd-1.0.1.ebuild:
+  Update license. Update nss-myhostname dependency due to systemd-197 (bug
+  #453026). Drop old.
 
   06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> openrc-settingsd-1.0.1.ebuild:
   Add ~sparc, wrt bug #449220
